--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,4 @@
-@tailwind base; 
-@tailwind components; 
+@import "~react-image-gallery/styles/css/image-gallery.css";
+@tailwind base;
+@tailwind components;
 @tailwind utilities;
